--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,14 +2,16 @@ name: "Github Actions Weather Bot"
 
 on:
     schedule:
-        - '15 7 * * *'
+        - cron: '15 7 * * *'
 
 jobs:
     bot:
+        runs-on: ubuntu-latest
         steps:
             - name: 'install node'
                 uses: actions/setup-node@v1
-            - name: 'install npm dependencies'
+                uses: actions/checkout@v1
+             - name: 'install npm dependencies'
                 run: npm install
             - name: 'Execute the code'
                  run: node index.js
