--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,22 +1,22 @@
-name: "Github Actions Weather Bot"
+name: 'GitHub Actions Weather Bot'
 
 on:
-    push:
-    schedule:
-            - cron: '15 7 * * *'
+  push:
+  schedule:
+    - cron: '12 15 * * *'
 
 jobs:
-    bot:
+  bot:
     runs-on: ubuntu-latest
     steps:
-        - uses: actions/checkout@v1
-        - name: 'Install node'
-            uses: actions/setup-node@v1
-        - name: 'Install NPM dependencies'
-            run: npm install
-        - name: 'Execute the code'
-            run: node index.js
-            env: 
-                TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-                TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-                TELEGRAM_WEATHER_API: ${{ secrets.TELEGRAM_WEATHER_API }}
+      - uses: actions/checkout@v1
+      - name: 'Install node'
+        uses: actions/setup-node@v1
+      - name: 'Install NPM dependencies'
+        run: npm install
+      - name: 'Run code'
+        run: node index.js
+        env:
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          WEATHER_API_TOKEN: ${{ secrets.WEATHER_API_TOKEN }}
